Including frame transforms to the trajectory class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ if(WIN32 AND BUILD_SHARED_LIBS)
   option(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS "On Windows, export all symbols when building a shared library." ON)
 endif()
 
+find_package(catkin REQUIRED COMPONENTS)
+include_directories(${catkin_INCLUDE_DIRS})
 
 add_library(ruckig
   src/ruckig/brake.cpp
@@ -39,7 +41,8 @@ target_include_directories(ruckig PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
-target_link_libraries(ruckig PUBLIC)
+target_link_libraries(ruckig PUBLIC
+  ${catkin_LIBRARIES})
 
 
 if(MSVC)
