--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,8 @@
   <license>MIT</license>
 
   <buildtool_depend>cmake</buildtool_depend>
-
+  <buildtool_depend>catkin</buildtool_depend>
+  <depend>geometry_msgs</depend>
   <export>
     <build_type>cmake</build_type>
   </export>
